@@ -1,3 +1,7 @@
+  28 Mar 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  passwordsafe-0.95.1.ebuild:
+  app-admin/passwordsafe: minor improvements
+
 *passwordsafe-0.95.1 (10 Feb 2015)
 
   10 Feb 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
